--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "extra-fetch": "^4.0.4",
     "extra-request": "^8.1.6",
     "extra-response": "^0.5.1",
+    "hotypes": "^0.5.1",
     "husky": "4",
     "jest": "29.4.1",
     "jest-resolve": "^29.4.1",
@@ -74,6 +75,7 @@
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.16",
     "@blackglory/errors": "^3.0.0",
+    "@blackglory/prelude": "^0.3.1",
     "@blackglory/structures": "^0.13.1",
     "@blackglory/wait-for": "^0.6.0",
     "@fastify/bearer-auth": "^9.0.0",
@@ -90,7 +92,6 @@
     "extra-tags": "^0.3.1",
     "extra-timers": "^0.2.5",
     "fastify": "^4.12.0",
-    "justypes": "^4.1.0",
     "migration-files": "^0.4.0",
     "prom-client": "^14.1.1",
     "return-style": "^2.0.3",
