--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "extra-response": "^0.5.1",
     "hotypes": "^0.6.1",
     "husky": "4",
+    "iterable-operator": "^4.0.6",
     "jest": "29.5.0",
     "jest-resolve": "^29.5.0",
     "nodemon": "^2.0.22",
@@ -80,10 +81,10 @@
     "extra-abort": "^0.3.3",
     "extra-defer": "^0.2.7",
     "extra-filesystem": "^0.4.10",
-    "extra-generator": "^0.4.0",
     "extra-lazy": "^2.0.1",
     "extra-promise": "^6.0.5",
     "extra-semver": "^0.2.1",
+    "extra-sse": "^0.1.0",
     "extra-tags": "^0.4.1",
     "extra-timers": "^0.2.5",
     "fastify": "^4.15.0",
