--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "license": "MIT",
   "type": "module",
   "engines": {
-    "node": ">=16"
+    "node": ">=22"
   },
   "scripts": {
     "prepare": "ts-patch install -s",
     "deduplicate": "yarn-deduplicate",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules --max_old_space_size=4096' jest --runInBand --no-cache --config jest.config.cjs",
+    "test": "vitest run",
     "clean": "rimraf lib dist",
     "build": "tsc --project tsconfig.build.json",
     "bundle": "webpack --stats-error-details",
@@ -35,56 +35,55 @@
     }
   },
   "devDependencies": {
-    "@blackglory/http-status": "^2.0.1",
-    "@blackglory/jest-resolver": "^0.3.0",
-    "@commitlint/cli": "^17.5.0",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@types/jest": "29.5.0",
-    "@types/node": "16",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.36.0",
-    "extra-fetch": "^4.0.4",
-    "extra-request": "^8.3.0",
-    "extra-response": "^0.5.1",
-    "hotypes": "^0.6.1",
+    "@blackglory/http-status": "^2.0.3",
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
+    "@eslint/js": "^10.0.1",
+    "@types/node": "22",
+    "@types/semver": "^7.7.1",
+    "cross-env": "^10.1.0",
+    "eslint": "^10.0.0",
+    "extra-fetch": "^5.2.0",
+    "extra-request": "^11.0.2",
+    "extra-response": "^0.6.0",
+    "hotypes": "^0.6.5",
     "husky": "4",
-    "iterable-operator": "^4.0.6",
-    "jest": "29.5.0",
-    "jest-resolve": "^29.5.0",
+    "iterable-operator": "^6.0.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
+    "rimraf": "^6.1.3",
     "standard-version": "^9.5.0",
-    "ts-jest": "29.0.5",
-    "ts-patch": "^2.1.0",
-    "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.7.4",
-    "typescript-transform-paths": "^3.4.6",
-    "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1",
-    "yarn-deduplicate": "^6.0.1"
+    "ts-patch": "^3.3.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.55.0",
+    "typescript-transform-paths": "^3.5.6",
+    "vite": "^7.3.1",
+    "vite-tsconfig-paths": "^6.1.1",
+    "vitest": "^4.0.18",
+    "webpack": "^5.105.2",
+    "webpack-cli": "^6.0.1",
+    "yarn-deduplicate": "^6.0.2"
   },
   "dependencies": {
     "@blackglory/errors": "^3.0.3",
-    "@blackglory/prelude": "^0.3.3",
-    "@blackglory/structures": "^0.13.4",
-    "@blackglory/wait-for": "^0.7.4",
+    "@blackglory/prelude": "^0.4.0",
+    "@blackglory/structures": "^0.14.11",
+    "@blackglory/wait-for": "^0.8.4",
     "@fastify/cors": "^8.2.1",
-    "dotenv": "^16.0.3",
-    "extra-abort": "^0.3.7",
-    "extra-defer": "^0.2.8",
-    "extra-filesystem": "^0.5.1",
+    "dotenv": "^17.3.1",
+    "extra-abort": "^0.4.1",
+    "extra-defer": "^0.3.1",
+    "extra-filesystem": "^0.6.1",
     "extra-lazy": "^2.0.2",
-    "extra-promise": "^6.0.7",
-    "extra-semver": "^0.2.2",
-    "extra-sse": "^0.3.0",
-    "extra-tags": "^0.4.2",
-    "extra-timers": "^0.2.6",
+    "extra-promise": "^7.0.1",
+    "extra-semver": "^0.2.3",
+    "extra-sse": "^0.5.0",
+    "extra-tags": "^0.5.4",
+    "extra-timers": "^0.3.0",
     "fastify": "^4.15.0",
     "return-style": "^3.0.1",
-    "rxjs": "^7.8.0",
-    "value-getter": "^0.3.2",
-    "you-died": "^0.4.4"
+    "rxjs": "^7.8.2",
+    "value-getter": "^0.3.3",
+    "you-died": "^0.4.6"
   }
 }
